tests/good/misc/print-char-array.pas
program PrintCharArray;

var a: array[0..15] of integer;

begin
    a := 'Hello, world!';
    WriteLn(a);
end.
