tests/bad/type-array-param.pas
program type_array_param;

type
    Vec = array[0..1] of integer;

procedure consume(v: Vec);
begin
end;

begin
end.
